# what2eat

./: LICENSE  pyproject.toml
alembic/: env.py
alembic/versions/: d4a5f1c77b0f_init_migration.py
src/: lifespan.py  main.py
src/auth/: config.py
src/core/: base_model.py  config.py  database.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
